Lab 1: Updated bullet points

--- a/OCVS/manifest.json
+++ b/OCVS/manifest.json
@@ -1,7 +1,7 @@
 {
   "tutorials": [
       {
-        "title": "Workshop README",
+        "title": "Workshop Overview",
         "description": "Oracle Cloud VMware Solution Self-Guided Hands-On Workshop Overview",
         "publisheddate": "7/15/2020",
         "filename": "README.md"
